namespace Application.Sensors.Models.CreateSensorRouter;

public sealed record CreateSensorRouterRequest(int SensorId, int DatasetId);
