namespace Application.Sensors.Models.CreateSensorRouter;

public sealed record CreateSensorRouterResponse(int Id);
